@@ -1,0 +1,6 @@
+---
+title: Builtin Check Plugins
+weight: 2000
+---
+
+The following build in plugins are available:
