@@ -22,6 +22,9 @@ NRPEServer = disabled
 ; PrometheusServer - Enable /metrics HTTP server for the agent itself.
 PrometheusServer = disabled
 
+; CheckBuiltinPlugins - Enable builtin plugins from /settings/builtin plugins/... like check_nsc_web
+CheckBuiltinPlugins = disabled
+
 ; CheckExternalScripts - Enable scripts from /settings/external scripts/...
 CheckExternalScripts = disabled
 
@@ -117,6 +120,17 @@ allow nasty characters = false
 allow arguments = true
 
 
+; Builtin plugins settings - General settings for the builtin plugins
+[/settings/builtin plugins]
+
+
+; builtin plugins: default - The configuration section for all builtin plugins
+[/settings/builtin plugins/default]
+
+; disabled - Disable this command
+disabled = false
+
+
 ; External script settings - General settings for the external scripts module (CheckExternalScripts).
 [/settings/external scripts]
 
@@ -159,7 +173,7 @@ command =
 
 
 ; External scripts - A list of scripts available to run from the CheckExternalScripts module.
-; Syntax is: `command=script arguments`
+; Syntax is: `commandname = path/script arguments...`
 [/settings/external scripts/scripts]
 
 
